# CDEF

./: .gitignore  CDEF_3_10_25_v3_Copula.ipynb  CDEF_3_10_25_v4_Copula (1).ipynb  CDEF_3_10_25_v4_Copula.ipynb  CDEF_3_18_25_v3_Copula.ipynb  FERP_2_16_25_Copula.ipynb  FERP_2_17_25_Copula.ipynb  FERP_3_10_25_Copula.ipynb  FERP_3_10_25_V2_Copula.ipynb  FERP_3_11_25_Copula.ipynb  FERP_3_4_25_Copula.ipynb  FERP_3_5_25_Copula.ipynb  FERP_Copula.ipynb  New_Copula_Class_with_Examples.ipynb  README.md  cdef_demo_fixed.py  core.py  data.xlsx  pyproject.toml  requirements.txt
docs/original/: 10 14.ipynb  cdef_demo_fixed.py  gumbel_copula_fixed.py  visualization.ipynb
examples/: run_demo.py
src/: cdef_demo_fixed.py  demo.py
src/cdef_analyzer/: __init__.py  core.py  demo.py  gumbel_copula_fixed.py  test_imports.py
src/examples/: demo.py  run_demo.py
src/visualization/: CDEF_visualization.ipynb  READ.me  requirements.txt
