[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdef-analyzer"
version = "0.1.0"
description = "CDEF: Concordance–Dispersion–Extremeness analyzer with Gumbel-copula ranking diagnostics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="Your Name", email="you@example.com" }]
keywords = ["copula", "ranking", "Gumbel", "Kendall", "Mallows", "CDEF"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "copulas>=0.11",
]


[project.optional-dependencies]
viz = ["matplotlib>=3.8", "ipywidgets>=8.1", "ipython>=8.18"]

[project.urls]
Homepage = "https://github.com/youruser/CDEF"
Documentation = "https://github.com/youruser/CDEF/blob/main/docs/usage.md"
Issues = "https://github.com/youruser/CDEF/issues"

[project.scripts]
cdef-demo = "cdef_analyzer.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
